<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:text="@string/minesweeper"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/flag"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/flag_number"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp" />

    <Button
        android:id="@+id/button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="60dp"
        android:text="@string/restart" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bomb"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="300dp"
        android:layout_marginStart="300dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bomb_number"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="360dp"
        android:layout_marginStart="360dp" />

</RelativeLayout>